Fix in the upper spacing of the links block in the everypage project page

--- a/src/Assets/Styles/_projects.scss
+++ b/src/Assets/Styles/_projects.scss
@@ -104,7 +104,7 @@
         justify-content: center;
         align-items: center;
         gap: 2rem;
-        margin-top: 3rem;
+        margin-top: 2.5rem;
     }
 
     .projectContent {
